# pdc-project

./: .gitattributes  .gitignore  README.md  Receivre - copie.py  Receivre - copie2.py  Receivre-.py  Receivre.py  Receivre2.py  Receivre3000.py
receiver/: FindColor.html  FindColor.ipynb  FindScreen.ipynb  Receivre.ipynb  Receivre3000.py  transleter.ipynb
transmitter/: .gitignore  CMakeLists.txt  FindGLEW.cmake  FindGLFW3.cmake  settings.cmake
transmitter/project/: CMakeLists.txt  main.cpp  pdc_fshader.glsl  pdc_vshader.glsl
